--- a/app/views/comments/create.js.haml
+++ b/app/views/comments/create.js.haml
@@ -1,4 +1,4 @@
 :plain
   $('#comments').append(" #{escape_javascript(render(@comment))} ");
-  $('#new_commentaire')[0].reset();
+  $('#content_id').val('');
 
