--- a/app/views/comments/new.html.haml
+++ b/app/views/comments/new.html.haml
@@ -1,11 +1,11 @@
-=form_for [@article,@article.comments.new],remote: true do |f|
+=form_for [@article,@article.comments.new],id: "new_commentaire", remote: true do |f|
    
   
   %br  
   %label 
     Content
   %br  
-    =f.text_area :content
+    =f.text_area :content, id: "content_id" 
   = f.submit 'Save'
 
 
